--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "catched",
-  "version": "1.0.0",
-  "description": "Smart async/await error handling.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/schulke-214/catched.git"
-  },
-  "keywords": [
-    "async-await",
-    "async",
-    "await",
-    "error-handling",
-    "es7",
-    "node"
-  ],
-  "author": "schulke-214 <hello@maximilianschulke.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/schulke-214/catched/issues"
-  },
-  "homepage": "https://github.com/schulke-214/catched#readme",
-  "dependencies": {
-    "@zeit/ncc": "^0.20.4"
-  }
+	"name": "catched",
+	"version": "1.0.0",
+	"description": "Smart async/await error handling.",
+	"main": "dist/index.js",
+  	"scripts": {
+    	"build": "ncc build index.js -o dist/index.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/schulke-214/catched.git"
+	},
+	"keywords": [
+		"async-await",
+		"async",
+		"await",
+		"error-handling",
+		"es7",
+		"node"
+	],
+	"author": "schulke-214 <hello@maximilianschulke.com>",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/schulke-214/catched/issues"
+	},
+	"homepage": "https://github.com/schulke-214/catched#readme",
+	"dependencies": {
+		"@zeit/ncc": "^0.20.4"
+	}
 }
