--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "1.0.0",
 	"description": "Smart async/await error handling.",
 	"main": "dist/index.js",
-  	"scripts": {
-    	"build": "ncc build index.js -o dist/index.js"
+	"scripts": {
+		"build": "ncc build index.js -o dist -m"
 	},
 	"repository": {
 		"type": "git",
@@ -25,6 +25,6 @@
 	},
 	"homepage": "https://github.com/schulke-214/catched#readme",
 	"dependencies": {
-		"@zeit/ncc": "^0.20.4"
+		"@zeit/ncc": "^0.20.4",
 	}
 }
